ajutes e install firebase

--- a/tutorApp/src/app/modules/login/login.page.html
+++ b/tutorApp/src/app/modules/login/login.page.html
@@ -1,7 +1,7 @@
-<ion-content [fullscreen]="true">
-  <div id="container">
+<ion-content class="content" [fullscreen]="true">
+  <div>
     <div class="content-logo">
-      logo
+      <img src="../../../assets/image/descarga.png" alt="" srcset="">
     </div>
 
     <ion-card class="ion-padding">
@@ -16,7 +16,7 @@
           <ion-row>
             <ion-col>
               <label for="inp" class="inp">
-                <input type="text" id="inp" formControlName="id">
+                <input type="email" id="inp" formControlName="id">
                 <span class="label">Correo</span>
                 <span class="focus-bg"></span>
               </label>
