--- a/tutorApp/src/app/modules/login/login.page.html
+++ b/tutorApp/src/app/modules/login/login.page.html
@@ -1,7 +1,7 @@
 <ion-content class="content" [fullscreen]="true">
   <div>
     <div class="content-logo">
-      <img src="../../../assets/image/descarga.png" alt="" srcset="">
+      <img class="logo" src="../../../assets/image/descarga.svg" alt="" srcset="">
     </div>
 
     <ion-card class="ion-padding">
