--- a/tutorApp/src/app/modules/register/register.page.html
+++ b/tutorApp/src/app/modules/register/register.page.html
@@ -1,7 +1,7 @@
 <ion-content class="content" [fullscreen]="true">
   <div id="container">
     <div class="content-logo">
-      <img src="../../../assets/image/descarga.png" alt="" srcset="">
+      <img src="../../../assets/image/descarga.svg" alt="" srcset="">
     </div>
 
     <ion-card class="ion-padding">
@@ -82,7 +82,7 @@
             <ion-col>
               <label for="phoneNumber" class="inp">
                 <input type="number" id="phoneNumber" formControlName="phoneNumber">
-                <span class="label">Numero</span>
+                <span class="label">Numero celular</span>
                 <span class="focus-bg"></span>
               </label>
             </ion-col>
@@ -124,7 +124,7 @@
               </label>
             </ion-col>
           </ion-row>
-          <ion-row *ngIf="rol">
+          <!-- <ion-row *ngIf="rol">
             <ion-col>
               <label for="especialidad" class="inp">
                 <select id="especialidad" formControlName="especialidad">
@@ -138,7 +138,7 @@
                 <span class="focus-bg"></span>
               </label>
             </ion-col>
-          </ion-row>
+          </ion-row> -->
 
         </div>
         <div class="card-button">
