--- a/tutorApp/src/app/modules/login/login.page.scss
+++ b/tutorApp/src/app/modules/login/login.page.scss
@@ -7,5 +7,9 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        margin: 30px 0;
+        .logo {
+            width: 50%;
+        }
     }
 }
