--- a/tutorApp/src/app/modules/register/register.page.scss
+++ b/tutorApp/src/app/modules/register/register.page.scss
@@ -1,11 +1,15 @@
 @import "../../../theme/forms.scss";
 .content {
+    --background: #f7f7f7;
     display: flex;
     align-items: center;
     .content-logo {
+        margin: 60px 0;
         display: flex;
         align-items: center;
         justify-content: center;
+        img {width: 60%;}
     }
+
 }
 
