--- a/tutorApp/src/app/modules/home/home.page.html
+++ b/tutorApp/src/app/modules/home/home.page.html
@@ -12,7 +12,7 @@
       <ion-label>Crear tutorias</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="create-lead" *ngIf="userType == 'student'">
+    <ion-tab-button tab="add-lead" *ngIf="userType == 'student'">
       <ion-icon name="person-circle"></ion-icon>
       <ion-label>Buscar tutorias</ion-label>
     </ion-tab-button>
