--- a/tutorApp/src/global.scss
+++ b/tutorApp/src/global.scss
@@ -24,3 +24,11 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+.content {
+    --background: #f7f7f7;
+}
+
+.card-list {
+    width: 80%;
+}
