--- a/tutorApp/src/app/modules/home/detail/detail.page.html
+++ b/tutorApp/src/app/modules/home/detail/detail.page.html
@@ -1,28 +1,34 @@
 
-
-<ion-content>
-  <ion-card *ngIf="item.rol === tutor">
+  <ion-card>
     <ion-card-header>
       <ion-card-subtitle>{{item.tutor.name}} {{item.tutor.surname}}</ion-card-subtitle>
       <ion-card-title>{{item.materia}}</ion-card-title>
     </ion-card-header>
-  
+
     <ion-card-content>
-      <ion-icon name="trash-outline" slot="end"></ion-icon>
       <p><b>Fecha:</b>{{item.date}}</p>
       <p><b>Hora:</b>{{item.time}}</p>
       <p><b>Modalidad:</b>{{item.modalidad}}</p>
       <p><b>Lugar:</b>{{item.lugar}}</p>
-      <p><b>Alumnos registrados:</b></p>
-      <ul>
+      <ul *ngIf="user.rol != 'student'">
+        <p><b>Alumnos registrados:</b></p>
         <li *ngFor="let element of item.alumno">
           <p>{{element.name}} {{element.surname}}</p>
           <p>{{element.email}}</p>
         </li>
       </ul>
-      <app-button [type]="'submit'" [text]="'Entiendo'" [color]="'button-primary'"
-                (clickButton)="goToBack()"></app-button>
+      <div class="ion-margin-top">
+        <app-button *ngIf="user.rol != 'student'" [type]="'submit'" [text]="'Eliminar tutoria'"
+          [color]="'button-delete'" (clickButton)="delete()"></app-button>
+      </div>
+      <div class="ion-margin-top">
+        <app-button *ngIf="user.rol == 'student'" [type]="'submit'" [text]="'Registrarme'" [color]="'button-primary'"
+          (clickButton)="registerInTutoyShips()"></app-button>
+      </div>
+      <div class="ion-margin-top">
+        <app-button [type]="'submit'" [text]="'Entiendo'" [color]="'button-primary'" (clickButton)="goToBack()">
+        </app-button>
+      </div>
     </ion-card-content>
   </ion-card>
-  
-</ion-content>
+
